「パスワード生成機能」を追加

--- a/機能一覧.md
+++ b/機能一覧.md
@@ -12,3 +12,6 @@
 
 利用者が本サービス利用にあたり登録するメールアドレスが、すでに漏洩してないかどうかを検知するサービスです。漏洩検知は、「A troyhunt.com project」が提供する、「[haveibeenpwned.com](https://haveibeenpwned.com/)」のサービスを利用しています。
 
+### 4.パスワード生成：無料
+
+利用者がエクステンションからパスワードを生成することができる機能です。
