--- a/利用規約.md
+++ b/利用規約.md
@@ -16,11 +16,11 @@
 3. 提携サイトについては、本規約の適用範囲外とし、利用者は、提携サイトが提供する規約に従うものとします。
 
 ### 第4条　本サービスの機能と料金
-本サービスの機能と料金は別紙[「paspit機能一覧」](https://github.com/datasign-inc/paspit/blob/master/%E6%A9%9F%E8%83%BD%E4%B8%80%E8%A6%A7.md)のとおりとし、当社は、第13条に定める場合を除き、30日前までに利用者に通知することによって、機能の追加・変更・廃止等を利用者の事前の承諾なく自由に行うことができるものとします。料金が変更され、利用者が追加料金を支払うこととなるものについては、利用者の事前の承諾を得ない限り、請求を行いませんが、制限される場合があります。機能の追加・変更・廃止等を行ったとしても、利用者の個人情報等を、利用者の許可なく第三者に提供することはしません。
+本サービスの機能と料金は別紙<a href="https://github.com/datasign-inc/paspit/blob/master/%E6%A9%9F%E8%83%BD%E4%B8%80%E8%A6%A7.md" target="_blank">「paspit機能一覧」</a>のとおりとし、当社は、第13条に定める場合を除き、30日前までに利用者に通知することによって、機能の追加・変更・廃止等を利用者の事前の承諾なく自由に行うことができるものとします。料金が変更され、利用者が追加料金を支払うこととなるものについては、利用者の事前の承諾を得ない限り、請求を行いませんが、制限される場合があります。機能の追加・変更・廃止等を行ったとしても、利用者の個人情報等を、利用者の許可なく第三者に提供することはしません。
 
 ### 第5条　本サービスの使用許諾
 1. 当社は、利用者に対し、本規約に規定された条件のもとで、非独占的に使用することを許諾します。
-2. 本サービスの利用にあたっては、ブラウザ拡張機能の利用が必要であり、ブラウザ拡張機能は別紙[「対応ブラウザ」](https://github.com/datasign-inc/paspit/blob/master/%E5%AF%BE%E5%BF%9C%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E4%B8%80%E8%A6%A7.md)に記載されているブラウザにおいてのみ動作保証をします。
+2. 本サービスの利用にあたっては、ブラウザ拡張機能の利用が必要であり、ブラウザ拡張機能は別紙<a href="https://github.com/datasign-inc/paspit/blob/master/%E5%AF%BE%E5%BF%9C%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E4%B8%80%E8%A6%A7.md" target="_blank">「対応ブラウザ」</a>に記載されているブラウザにおいてのみ動作保証をします。
 
 ### 第6条　本サービスの使用範囲
 1. 本サービスは、利用者が個人で使用する目的でのみ利用することができ、販売、配布および開発目的など他の目的で使用することはできません。
