--- a/利用規約.md
+++ b/利用規約.md
@@ -105,7 +105,7 @@
 2. 当社は、本サービスの利用希望者、利用者または第三者に対して、前項に定める変更、追加、廃止、中止、中断等による損害について、損害賠償、原状回復その他一切の責任を負担しないものとします。
 
 ### 第14条　本サービス利用に関する個人情報の取扱
-当社は、本サービス利用に関する個人情報の取扱については、別途[「paipit個人情報保護方針」](https://pds.paspit.com/pii_policy.html)に基づき、適切に取扱うものとします。
+当社は、本サービス利用に関する個人情報の取扱については、別途[「paspit個人情報保護方針」](https://pds.paspit.com/pii_policy.html)に基づき、適切に取扱うものとします。
 
 ### 第15条　通信の秘密
 1. 当社は、電気通信事業法に基づき、利用者の通信の秘密を守ります。ただし、本規約に定める場合、本サービスの提供上、やむを得ないと当社が判断した場合、または利用者から同意を得て取得した場合はこの限りではありません。
