--- a/個人情報保護方針.md
+++ b/個人情報保護方針.md
@@ -71,7 +71,7 @@
 当社の、個人情報の開示・訂正等の請求窓口、および、個人情報の取扱に関するお問い合わせ・苦情・相談等の窓口は下記のとおりとなります。
 
 - 株式会社DataSign　paspitサポート
-- 東京都港区南青山2-13-2 サンライズ青山203号
+- 東京都新宿区新宿6-7-22 エルプリメント新宿 354号室
 - メールアドレス：privacy@datasign.jp
 
 ### 11.本方針の変更について
