--- a/個人情報保護方針.md
+++ b/個人情報保護方針.md
@@ -1,7 +1,7 @@
 # paspit個人情報保護方針
 
 この個人情報保護方針は、株式会社DataSign（以下「当社」といいます）が提供するサービスである「paspit」（以下「本サービス」といいます）を利用するために、利用者が登録した個人情報ならびに本サービスを利用することによって当社が取得する個人情報の取扱に関して定めたものです。
-本サービスの利用以外に関する当社の個人情報保護方針は[こちら](https://datasign.jp/pii_policy/)をご参照ください。
+当社全体の個人情報保護方針は[こちら](https://datasign.jp/pii_policy/)をご参照ください。
 
 ### 1.はじめに
 本サービスは、個人に関する情報（法律に定めがある個人情報の他クッキーや行動履歴などのパーソナルデータを含み、以下「個人情報」といいます）を利用者自身が管理し、本人の意思により流通させることのできる仕組みを構築することで、利用者が安心して、インターネットを利用し、データ活用のメリットを受けることができる世界を目指しています。当社は本サービスの機能の追加変更等により取得するパーソナルデータや利用方法に変更がある場合には、事前に通知します。
@@ -56,12 +56,15 @@
 ### 8.クラウドサービスの利用について
 当社は、業務運営の効率化を目的として、必要に応じてクラウドサービスを利用しています。個人情報の取扱に関して、現在使用しているクラウドサービスは以下のとおりです。
 
-| 利用サービス名 | 提供会社名 | 目的 |
-----|----|----
-| AmazonWebService | Amazon Web Services, Inc. | 本サービスのホスティングのため |
-| Zendesk | Zendesk, Inc. | お客様サポートサービスの利用のため |
-| have i been pwned | A troyhunt.com project | メールアドレス漏洩検出のため |
-	
+| クラウドサービス名 | 提供者<br>（所在地） | 利用目的 | 個人情報保護について |
+| ---- | ---- | ---- | ---- |
+| [AmazonWebService](https://aws.amazon.com/) | Amazon Web Services, Inc.<br>（アメリカ・ワシントン州） | 本サービスのホスティングのため | [日本のデータプライバシー](https://aws.amazon.com/jp/compliance/japan-data-privacy/) |
+| [Zendesk](https://www.zendesk.com/) | Zendesk, Inc.<br>（アメリカ・カリフォルニア州） | お客様サポートサービスの利用のため | [プライバシーポリシー](https://www.zendesk.co.jp/company/agreements-and-terms/privacy-policy/) |
+| [have i been pwned](https://haveibeenpwned.com/About) | A troyhunt.com project<br>（アメリカ） | メールアドレス漏洩検出のため | [Privacy](https://haveibeenpwned.com/Privacy) |
+
+当該外国における個人情報の保護に関する制度に関しては、個人情報保護委員会が公表する外国における個人情報の保護に関する制度等の調査についての情報をご確認ください。
+* [アメリカ（連邦）](https://www.ppc.go.jp/files/pdf/USA_report.pdf)
+* [アメリカ（カリフォルニア州）](https://www.ppc.go.jp/files/pdf/california_report.pdf)
 
 ### 9.個人情報の開示・訂正等について
 1. 当社は、利用者から当社の保有する個人データ（個人情報の保護に関する法律 第二条 第七項に定められた情報）についての開示の請求がある場合、その請求が利用者自身であることが確認でき次第、速やかに情報を開示します。請求が利用者自身からであることが確認できない場合には、開示には応じません。
