Datadogに関連する情報を追記
Datadogを利用開始するにともない当該クラウドサービス提供者に関する情報を追記しました。

--- a/個人情報保護方針.md
+++ b/個人情報保護方針.md
@@ -61,10 +61,12 @@
 | [AmazonWebService](https://aws.amazon.com/) | Amazon Web Services, Inc.<br>（アメリカ・ワシントン州） | 本サービスのホスティングのため | [日本のデータプライバシー](https://aws.amazon.com/jp/compliance/japan-data-privacy/) |
 | [Zendesk](https://www.zendesk.com/) | Zendesk, Inc.<br>（アメリカ・カリフォルニア州） | お客様サポートサービスの利用のため | [プライバシーポリシー](https://www.zendesk.co.jp/company/agreements-and-terms/privacy-policy/) |
 | [have i been pwned](https://haveibeenpwned.com/About) | A troyhunt.com project<br>（アメリカ） | メールアドレス漏洩検出のため | [Privacy](https://haveibeenpwned.com/Privacy) |
+| [Datadog](https://www.datadoghq.com/) | Datadog, Inc.<br>（アメリカ・ニューヨーク州） | アプリクラッシュログの収集・分析 | [セキュリティ](https://www.datadoghq.com/ja/security/) |
 
 当該外国における個人情報の保護に関する制度に関しては、個人情報保護委員会が公表する外国における個人情報の保護に関する制度等の調査についての情報をご確認ください。
 * [アメリカ（連邦）](https://www.ppc.go.jp/files/pdf/USA_report.pdf)
 * [アメリカ（カリフォルニア州）](https://www.ppc.go.jp/files/pdf/california_report.pdf)
+* [アメリカ（ニューヨーク州）](https://www.ppc.go.jp/files/pdf/newyork_report.pdf)
 
 ### 9.個人情報の開示・訂正等について
 1. 当社は、利用者から当社の保有する個人データ（個人情報の保護に関する法律 第二条 第七項に定められた情報）についての開示の請求がある場合、その請求が利用者自身であることが確認でき次第、速やかに情報を開示します。請求が利用者自身からであることが確認できない場合には、開示には応じません。
