住所変更、および、開示訂正削除について明確化
マイデータ画面から確認訂正削除が可能なことを追記。
また、削除請求について明確化。

住所の変更を反映。

--- a/個人情報保護方針.md
+++ b/個人情報保護方針.md
@@ -68,15 +68,17 @@
 * [アメリカ（カリフォルニア州）](https://www.ppc.go.jp/files/pdf/california_report.pdf)
 * [アメリカ（ニューヨーク州）](https://www.ppc.go.jp/files/pdf/newyork_report.pdf)
 
-### 9.個人情報の開示・訂正等について
-1. 当社は、利用者から当社の保有する個人データ（個人情報の保護に関する法律 第二条 第七項に定められた情報）についての開示の請求がある場合、その請求が利用者自身であることが確認でき次第、速やかに情報を開示します。請求が利用者自身からであることが確認できない場合には、開示には応じません。
-2. 個人情報の内容に誤りがあり、利用者自身から訂正・追加・削除の請求がある場合、当社で調査の上、速やかに対応いたします。この場合、請求が利用者自身からであることが確認できない場合は、請求には応じません。
+### 9.個人情報の開示・訂正・削除等について
+1. 当社が本サービスから取得した個人情報については、利用者自身で本サービスの「マイデータ」画面より、確認・訂正・削除いただけます。
+2. 当社は、利用者から当社の保有する個人データ（個人情報の保護に関する法律 第二条 第七項に定められた情報）についての開示の請求がある場合、その請求が利用者自身であることが確認でき次第、速やかに情報を開示します。請求が利用者自身からであることが確認できない場合には、開示には応じません。
+3. 個人情報の内容に誤りがあり、利用者自身から訂正の請求がある場合、当社で調査の上、速やかに対応いたします。この場合、請求が利用者自身からであることが確認できない場合は、請求には応じません。
+4. 個人情報の削除の請求がある場合、請求が利用者自身からであることが確認でき次第、速やかに対応いたします。
 
 ### 10.個人情報の取扱に関する連絡先
-当社の、個人情報の開示・訂正等の請求窓口、および、個人情報の取扱に関するお問い合わせ・苦情・相談等の窓口は下記のとおりとなります。
+当社の、個人情報の開示・訂正・削除等の請求窓口、および、個人情報の取扱に関するお問い合わせ・苦情・相談等の窓口は下記のとおりとなります。
 
 - 株式会社DataSign　paspitサポート
-- 東京都新宿区新宿6-7-22 エルプリメント新宿 354号室
+- 東京都新宿区新宿2-5-1 アルテビル新宿10階
 - メールアドレス：privacy@datasign.jp
 
 ### 11.本方針の変更について
